--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.url }}">Home</a>
+                    <a class="nav-link" href="{{ site.url }}/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ site.url }}/donations">Donation</a>
