--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="{{ site.url }}">소망의 동산</a>
+        <a class="navbar-brand" href="{{ site.baseurl }}">소망의 동산</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.url }}/">Home</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.url }}/donations">Donation</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/donations">Donation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.url }}/about">About</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
                 </li>
             </ul>
         </div>
