--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,7 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <title>{{ page.title }} | 소망의 동산</title>
-
-  <link href="{{ site.url }}/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{{ site.url }}/css/blog-post.css" rel="stylesheet">
+  {% include inner-head.html %}
 
 </head>
 
