--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; 소망의 동산 2019</p>
+        <p class="m-0 text-center text-white">Copyright &copy; 희망복지재단 2019</p>
     </div>
 </footer>
