--- a/_includes/inner-head.html
+++ b/_includes/inner-head.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="theme-color" content="#343A40">
 
 <title>{{ page.title }} | 희망복지재단</title>
 
