--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,17 @@
     <div class="row">
       <div class="col-lg-12">
         <h1 class="mt-4">{{ page.title }}</h1>
-        <p class="lead">Posted on {{ page.date }}</p>
+        <p class="lead">작성일 | {{ page.date | date: '%Y년 %-m월 %-d일' }} 
+          {% assign a = page.date | date: '%A' %}
+          {% case a %}
+            {% when 'Sunday' %} {{'일요일'}}
+            {% when 'Monday' %} {{'월요일'}}
+            {% when 'Tuesday' %} {{'화요일'}}
+            {% when 'Wednesday' %} {{'수요일'}}
+            {% when 'Thursday' %} {{'목요일'}}
+            {% when 'Friday' %} {{'금요일'}}
+            {% when 'Saturday' %} {{'토요일'}}
+          {% endcase %}</p>
         <hr>
         {{ content }}
         <hr>
