--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,14 +7,22 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/">메인화면</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.baseurl }}/donations">Donation</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/donations">후원 내역</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/history">연혁</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ site.baseurl }}/status">시설 현황</a>
+                </li>
+                <!--
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ site.baseurl }}/about">소개</a>
+                </li>
+                -->
             </ul>
         </div>
     </div>
