--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,15 @@
   <!-- Navigation -->
   {% include nav.html %}
 
+  <header class="py-5 bg-image-full text-center" style="background-image: url('/img/index-1.webp');">
+    <div class="wfh-header-bg">
+      <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
+      <hr style="width: 50%; border-color: #cccccc;">
+      <h3>후원 내역</h3>
+    </div>
+  </header>
+
   <div class="container" style="padding: 24px;">
-    <h1 class="display-4">후원 내역</h1>
-    <hr>
     <div class="row">
       <div class="col-lg-12">
         <h1 class="mt-4">{{ page.title }}</h1>
